--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,55 @@
+:root{
+  --fb: rgb(253, 190, 21);
+}
+
+/* FONTS */
+@font-face {
+  font-family:pop;
+  src: url(./assets/fonts/Poppins-Bold.ttf);
+}
+
+@font-face {
+  font-family:popLight;
+  src: url(./assets/fonts/Poppins-Light.ttf);
+}
+
+@font-face {
+  font-family:albert;
+  src: url(./assets/fonts/Alberto-Regular.ttf);
+}
+
+
+
+h1{
+  color: var(--fb);
+  font-family: pop;
+}
+
+h2{
+  color: var(--fb);
+  font-family: albert;  
+}
+
+.departures{
+  background-color: rgb(24, 24, 24);
+  border-radius: 10px;
+  padding: 10px;
+
+  
+}
+
+table{
+  background-color: rgb(82, 82, 82);
+  text-align: left;
+  color: white;
+  font-family:popLight;
+}
+
+.botones{
+  display: flex;
+  flex-direction: row;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
